initial page here!

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:              Personal Blog
+title:              Helen Du
 email:              naomizdu@gmail.com
-description:        A Blog Theme by Start Bootstrap
+description:        Need a place to record my tech learning path
 author:             helendu
 baseurl:            "/"
 url:                "https://Helenxzd.github.io"
